[package]
name = "gd-death-counter"
version = "0.3.0"
edition = "2021"
description = "A death counter for Geometry Dash."
license = "MIT"
authors = ["Evan Brierton"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
serde_json = "1.0.138"
notify = "8.0.0"
